rewrote chapter on spatial models

--- a/tex_files/bib-refs.bib
+++ b/tex_files/bib-refs.bib
@@ -610,6 +610,14 @@ outbreak in Germany},
  urldate = {2021-03-05}
 }
 
+@misc{tromsokorona,
+  author = {Tromsø Kommune},
+  date    = {2020-12-03},
+  title = {Alt om korona / Covid19 information },
+  howpublished = {\url{https://www.tromso.kommune.no/alt-om-korona-covid19-information.6258629-110070.html}},
+  note = {Accessed: 2021-03-24}
+}
+
 @Article{fitdistrplus,
     title = {{fitdistrplus}: An {R} Package for Fitting Distributions},
     author = {Marie Laure Delignette-Muller and Christophe Dutang},
