--- a/tex_files/chapter-analysis.tex
+++ b/tex_files/chapter-analysis.tex
@@ -25,13 +25,13 @@ The SIR in Hyllestad is around 4.5, following an outbreak in a shipyard in autum
 % \begin{figure}[H]
 %   \centering
 %   \includesvg[width = 1.2\textwidth]{sir_norway.svg}
-%   \caption{The standardised incidence ratio for Norway based on the data of the 20th of March 2021}
+%   \caption{The standardised incidence ratio for Norway based on the data of the 24th of March 2021}
 %   \label{sirnorway}
 % \end{figure}
 \begin{figure}[H]
   \centering
   \includegraphics[width = 1.2\textwidth]{sir_norway.png}
-  \caption{The standardised incidence ratio for Norway based on the data of the 20th of March 2021}
+  \caption{The standardised incidence ratio for Norway based on the data of the 24th of March 2021}
   \label{sirnorway}
 \end{figure}
 Because the high numbers from two small municipalities complicate the interpretation of Figure~\ref{sirnorway}, Figure~\ref{sirnorwaylog} shows the SIR on a log10 scale. It is now clearer that the standardized incidence ratio is below 1 in most parts of Norway, but that there is a higher risk in the region around Oslo.
@@ -208,11 +208,11 @@ As this was the overall best-performing spatial model for Germany, a look is tak
 %     \caption{A negative binomial fit to the number of cases in Norwegian municipalities}
 %     \label{nb_norge}
 % \end{figure}
-\subsubsection{Infrastructure Models}
+\subsubsection{Infrastructure Models}\label{sssec:infraGermany}
 When it comes to the models based on the infrastructural variables, a BYM2 model performed the best. It was computed using formula in Listing~\ref{codeInfraGermany}. \\
 The performance measures of this model and the best-performing Besag proper and Leroux model are shown in Table~\ref{infraGermany}
 \begin{table}[H] 
-\caption{The performance measures for the best performing demographic model of each type. \label{infraGermany}}
+\caption{The performance measures for the best performing infrastructure model of each type. \label{infraGermany}}
 \begin{tabular}{l r r r r}
 \toprule
 \textbf{Model}	& \textbf{DIC}	& \textbf{WAIC} & \textbf{CPO} & \textbf{MAE}\\
@@ -261,7 +261,7 @@ Finally, models are considered that include both the infrastructural and demogra
 The best performing model was again a BYM2 model, run with the formula shown in Listing~\ref{codeBothGermany}. \\
 The performance measures of the computed models are shown in Table~\ref{allGermany}.
 \begin{table}[H] 
-\caption{The performance measures for the best performing demographic model of each type. \label{allGermany}}
+\caption{The performance measures for the best performing demographic + infrastructure model of each type. \label{allGermany}}
 \begin{tabular}{l r r r r}
 \toprule
 \textbf{Model}	& \textbf{DIC}	& \textbf{WAIC} & \textbf{CPO} & \textbf{MAE}\\
@@ -302,205 +302,90 @@ die\_linke & -0.1284 &  0.8799 & 0.8288 & 0.9333\\
 \end{table}
 According to this model, the three biggest driving factors are the percentage of votes the AfD receives, the population density and the number of schools in a municipality. The influence of the AfD and the number of schools has already been discussed in section~\ref{sssec:demoGermany}. Regarding population density, it can be said that if it increases by 1 standard deviation, the risk of infection increases by 12.7\%. The more people are concentrated per square kilometre, the easier it is for a virus to spread because the distances between people become smaller. Other factors that positively influence the risk of infection are the number of social welfare recipients, the number of sports facilities and the number of places of worship, although the risk increase for the latter is only just above 0. Sports facilities are again a place where many people come together, and here, depending on the type of sport, there can also be more contact, which in turn favours the spread of a virus. The last effect worth mentioning is the logarithmic business tax. If a region receives more revenue through business tax, the risk of infection in that region decreases. Therefore, people in communities where there is less money are at higher risk. 
 \subsection{Spatial Models for Norway}
-Next, the same types of models are evaluated for Norway. These models are based on data from 12 March 2021, when 76577 people in Norway were confirmed infected with Covid-19. The five municipalities with the most infections are shown in Table~\ref{top5norway}.
+Next, the same types of models are evaluated for Norway. These models are based on data from 24 March 2021, when 87537 people in Norway were confirmed infected with Covid-19. The five municipalities with the most infections are shown in Table~\ref{top5norway}.
 \begin{table}[H] 
-\caption{The municipalities with the most infections as of March 12th 2021. \label{top5norway}}
+\caption{The municipalities with the most infections as of March 24th 2021. \label{top5norway}}
 \begin{tabular}{l r r}
 \toprule
 \textbf{Municipality}	& \textbf{Population}	& \textbf{Number of infections} \\
 \midrule
-Oslo & 693494 & 22248 \\
-Bergen & 283929 & 4618 \\
-Drammen & 101386 & 2549 \\
-Lillestrøm & 85983 & 2390 \\
-Fredrikstad & 82385 & 2373 \\
+Oslo & 693494 & 26151 \\
+Bergen & 283929 & 4738 \\
+Drammen & 101386 & 3149 \\
+Bærum & 127731 & 2834 \\
+Lillestrøm & 85983 & 2779 \\
 \bottomrule
 \end{tabular}
 \end{table}
 \subsubsection{Demographic Models}
-As with Germany, the best demographic model was again a Leroux model. Only this time, the covariates of the model were selected using forwards variable selection. The following formula was used for the model:
-\begin{lstlisting}[caption={The formula for the best Leroux model based on the demographic variables}, label={codeDemoNorway}, language = R]
-formula_22_leroux <- value ~
-  pop_dens + immigrants_pure + median_age +
-  sex +
-  f(
-    idarea_1, model = "generic1",
-    Cmatrix = C, hyper = prior_2
-  )
-\end{lstlisting}
-The performance measures for all three types of models are shown in Table~\ref{demoNorway}.
+As with Germany, the best demographic model was again a Leroux model calculated using the formula shown in Listing~\ref{codeDemoNorway}. \\
+The performance measures for all three models are shown in Table~\ref{demoNorway}. It is noticeable that the mean error in Norway is significantly smaller, suggesting that the models for Germany have greatly overestimated or underestimated the number of infections.
 \begin{table}[H] 
 \caption{The performance measures for the best performing demographic model of each type. \label{demoNorway}}
-\begin{tabular}{l l l l}
+\begin{tabular}{l r r r r}
 \toprule
-\textbf{Model}	& \textbf{DIC}	& \textbf{WAIC} & \textbf{CPO} \\
+\textbf{Model}	& \textbf{DIC}	& \textbf{WAIC} & \textbf{CPO} & \textbf{MAE}\\
 \midrule
-Besags Proper  & 2804 (45) & 2820 (45) & -10433 (23) \\
-BYM2 & 2716 (3) & 2670 (14) & -9786 (25)\\
-Leroux & 2703 (1) & 2648 (1) & -11077 (14) \\
+Besag  & 2385 & 2397 & -3994 & 10210 \\
+BYM2 & 2212 & 2186 & -6241 & 10062\\
+Leroux & 2225  & 2182 & -7781 & 8922\\
 \bottomrule
 \end{tabular}
 \end{table}
-The Leroux model had the best performance in terms of both DIC and WAIC and also performed well in terms of CPO. Just like for Germany, a total of 66 models were calculated. Of the 14 best models in terms of CPO, 13 were Leroux models. \\
+All other performance measures for these models are also lower than for the models computed for Germany. \\
 The effects of the covariates are shown in Table~\ref{fixedDemoNorway}.
 \begin{table}[H] 
-\caption{The fixed effects for model 22. Values are rounded. \label{fixedDemoNorway}}
+\caption{The fixed effects for the Leroux model. Values are rounded. \label{fixedDemoNorway}}
 \begin{tabular}{l r r r r}
 \toprule
 \textbf{Variable}	& \textbf{Mean}	& \textbf{exp(mean$_{\hbox{p}}$)} & \textbf{exp(q0025$_{\hbox{p}}$)} & \textbf{exp(q0975$_{\hbox{p}}$)} \\
 \midrule
-(Intercept) & 1.087 & 222.4 & -8.203e+09 & -9.140e+04\\
-pop\_dens & 0.001775 & 1.002 & 1.001 & 1.003\\
-immigrants\_pure & -0.03358 & 0.9671 & 0.9392 & 0.9948\\
-median\_age & -0.03628  & 0.9645 & 0.9396 & 0.9897\\
-sex & -0.0426 & 2.902e+06 & -6.904e+26 & -1.164e+22 \\
+(Intercept) & -1.020 & 0.3611 & 0.3220 & 0.4029 \\
+unemp\_total & 0.3422 & 1.413 & 1.192 & 1.662 \\
+unemp\_immg & 0.02598 & 1.030 & 0.8646 & 1.218 \\
 \bottomrule
 \end{tabular}
 \end{table}
-There is little meaningful interpretation for the posterior mean of the intercept in this model due to its high value. Of note is that if the population density increases by 100 persons per square kilometre, the risk of infection increases by about 19.4\%. Furthermore, if the proportion of women in an area increases by 0.05, the risk of infection increases by around 7.7\%. Finally, if the average age in a community increases by 1 year, the risk of infection decreases by roughly 3.5\%. Because younger people tend to be more mobile, they come into contact with more people than older generations, so it makes sense that people living in younger areas have a higher risk of becoming infected with Covid-19.
+The posterior mean of the section implies a risk rate of -63.9\%, which does not say much except for the fact that there is a very low risk of getting Covid-19 in Norway. According to this model, the risk depends on only two factors, namely total unemployment and immigrant unemployment. A 1 standard deviation increase in total unemployment leads to a 41.3\% increase in risk and a 1 standard deviation increase in immigrant unemployment leads to a 3.0\% increase in risk. A possible explanation for this could be that the unemployed spend less time at home and instead move around more and thus have more contact with people, but this should be taken with a grain of salt.
 \subsubsection{Infrastructure Models}
-Looking at the 24 models computed for Norway that are based on the infrastructural variables, once again a Leroux model based on forwards variable selection had the best performance. The formula is shown in Listing~\ref{codeInfraNorway}.
-\begin{lstlisting}[caption={The formula for the best Leroux model based on the infrastructural variables}, label={codeInfraNorway}, language = R]
-formula_30_leroux <- value ~
-  pop_dens + shops + retail + place_of_worship +
-  schools + nursing_home + kindergarten +
-  f(
-    idarea_1, model = "generic1",
-    Cmatrix = C, hyper = prior_2
-  )
-\end{lstlisting}
+For the models based on the infrastructural variables, the best predictive performance was observed for a Besag model. The formula is shown in Listing~\ref{codeInfraNorway}. \\
 The performance measure for the models are shown in Table~\ref{infraNorway}.
 \begin{table}[H] 
-\caption{The performance measures for the best performing demographic model of each type. \label{infraNorway}}
-\begin{tabular}{l l l l}
+\caption{The performance measures for the best performing infrastructure model of each type. \label{infraNorway}}
+\begin{tabular}{l r r r r}
 \toprule
-\textbf{Model}	& \textbf{DIC}	& \textbf{WAIC} & \textbf{CPO} \\
+\textbf{Model}	& \textbf{DIC}	& \textbf{WAIC} & \textbf{CPO} & \textbf{MAE} \\
 \midrule
-Besags Proper  & 2816 (17) & 2813 (17) & -10347 (8) \\
-BYM2 & 2728 (2) & 2671 (2) & -9145 (14)\\
-Leroux & 2718 (1) & 2665 (1) & -9553 (11) \\
+Besag  & 2222 & 2171 & -8196 & 11890 \\
+BYM2 & 2303 & 2310 & -8209 & 12048\\
+Leroux &  2201 & 2159 & -7015 & 13071\\
 \bottomrule
 \end{tabular}
 \end{table}
 The effect of the covariates are shown in Table~\ref{fixedInfraNorway}.
 \begin{table}[H] 
-\caption{The fixed effects for model 30. Values are rounded. \label{fixedInfraNorway}}
+\caption{The fixed effects for the Besag model. Values are rounded. \label{fixedInfraNorway}}
 \begin{tabular}{l r r r r}
 \toprule
 \textbf{Variable}	& \textbf{Mean}	& \textbf{exp(mean$_{\hbox{p}}$)} & \textbf{exp(q0025$_{\hbox{p}}$)} & \textbf{exp(q0975$_{\hbox{p}}$)} \\
 \midrule
-(Intercept) & -0.7263 & 0.4858 & 0.4024 & 0.5816 \\
-nursing\_home & 0.2017 & 1.270 & 0.7174 & 2.081 \\
-retail & 0.1541 & 1.169 & 1.023 & 1.329 \\
-kindergarten &  0.07385  &  1.082 & 0.8940 & 1.295 \\
-pop\_dens & 0.001853 & 1.002 & 1.001 & 1.003 \\
-schools & -0.1022 & 0.9065 & 0.7564 & 1.076 \\
-place\_of\_worship & -0.1098 & 0.8987 & 0.7710 & 1.040 \\
-shops & -0.1509 & 0.8633 & 0.7228 & 1.022 \\
+(Intercept) & -1.052 & 0.3545 & 0.2507 & 0.4909 \\
+schools & 0.3240 & 1.406 & 0.9815 & 1.971 \\
+kindergarten & 0.2531 & 1.3000 & 0.9906 & 1.688 \\
+pop\_dens & 0.1547 & 1.173 &  0.9726  & 1.411\\
+place\_of\_worship & 0.01973 & 1.029 & 0.7936 & 1.324 \\
+nursing\_home & 0.003313 & 1.004 & 0.9270 & 1.089\\
+restaurant & 0.001640 & 1.0323 & 0.6275 & 1.615 \\
+office & -0.07977 & 0.9263 &  0.7932 & 1.080 \\
+shops & -0.5000 &0.6584 & 0.2820 & 1.339 \\
 \bottomrule
 \end{tabular}
 \end{table}
-The posterior mean of the exponential intercept implies a risk rate of -51.42\% across Norway, with a credibility interval ranging from -59.76\% to -41.84\%. However, the risk rate increases if the number of nursing homes per 1000 inhabitants (between 0 and 1.851), retail shops per 1000 inhabitants (between 0 and 10.72), kindergartens per 1000 inhabitants (between 0 and 5.051) or the population density (between 0.1479 and 1437) increases. A 0.1 increase in nursing homes increases the risk by 2.4\%, an increase of 0.1 retail shops per 1000 inhabitants increases the risk by 1.6\% and an increase of 0.1 kindergartens per 1000 inhabitants increases the risk by 0.8\%. Finally, if the population density increases by 50 persons per square kilometre, the risk of infection increases by 20.4\%. Again, there are covariates that negatively affect the risk rate, but as stated earlier, it is probably safer to stay at home than to attend these facilities.
-\subsubsection{Combined Models}
-Looking at the models with both types of variables for Norway, a BYM2 model that used backwards variable selection performed the best. Its formula can be seen in Listing~\ref{codeAllNorway}
-\begin{lstlisting}[caption={The formula for the best BYM2 model based all variables}, label={codeAllNorway}, language = R]
-formula_31_bym2 <- value ~
-  median_age + unemp_tot + unemp_immg + workers_ft_com + 
-  workers_pt_com + mining_ft_com + mining_pt_com +
-  construction_pt_com + immigrants_total + immigrants_norge +
-  immigrants_pure + marketplace + entertainment + clinic + 
-  hairdresser + shops + place_of_worship + retail + 
-  nursing_home + aerodrome + platform + kindergarten + 
-  schools + bakeries + higher_education + pop_dens + urb_dens +
-  f(
-    idarea_1, model = "BYM2", graph = g,
-    scale.model = TRUE, hyper = prior_1
-  )
-\end{lstlisting}
-In Table~\ref{allNorway}, the performance measure of the respective models can be seen.
-\begin{table}[H] 
-\caption{The performance measures for the best performing demographic model of each type. \label{allNorway}}
-\begin{tabular}{l l l l}
-\toprule
-\textbf{Model}	& \textbf{DIC}	& \textbf{WAIC} & \textbf{CPO} \\
-\midrule
-Besags Proper  & 2926 (9) & 2958 (9) & -5811 (9) \\
-BYM2 & 2711 (1) & 2673 (2) & -9609 (4)\\
-Leroux & 2734 (6) & 2666 (1) & -12201 (1) \\
-\bottomrule
-\end{tabular}
-\end{table}
-The effects of the covariates are shown in Table-\ref{fixedAllNorway}.
-
-\begin{table}[H] 
-\caption{The fixed effects for model 31. Values are rounded. \label{fixedAllNorway}}
-\begin{tabular}{l r r r r}
-\toprule
-\textbf{Variable}	& \textbf{Mean}	& \textbf{exp(mean$_{\hbox{p}}$)} & \textbf{exp(q0025$_{\hbox{p}}$)} & \textbf{exp(q0975$_{\hbox{p}}$)} \\
-\midrule
-(Intercept) & 0.5638 & 2.126 & 0.5236 & 5.868 \\
-marketplace & 0.5562 & 2.944 & 0.2227 & 12.83 \\
-entertainment & 0.4206 & 1.575 & 0.9194 & 2.525 \\
-bakeries & 0.3080 & 1.408 & 0.8087 & 2.2557 \\
-unemployment\_ & \multirow{2}{*}{0.1610} & \multirow{2}{*}{1.176} & \multirow{2}{*}{1.081} & \multirow{2}{*}{1.285} \\
-immigrants \\
-clinic & 0.1375 & 1.157 & 0.8903 & 1.474 \\
-retail & 0.08740 & 1.094 & 0.9575 & 1.243 \\
-nursing\_home & 0.06441 & 1.097 & 0.6728 & 1.689 \\
-kindergarten & 0.04593 & 1.052 & 0.8618 & 1.271 \\
-place\_of\_worship & 0.02894 & 1.033 & 0.8831 & 1.200 \\
-mining\_pt\_com & 0.01075 & 1.013 & 0.9013 & 1.134 \\
-immigrants\_ & \multirow{2}{*}{0.006865} & \multirow{2}{*}{1.542e+38} & \multirow{2}{*}{-1.480e+13} & \multirow{2}{*}{-2.495e+08} \\
-norway \\
-mining\_ft\_com & 0.003582 & 1.004 & 0.9934 & 1.014 \\
-workers\_pt\_com & 0.003072 & 1.003 & 0.9957 & 1.011 \\
-construction\_ & \multirow{2}{*}{0.002205} & \multirow{2}{*}{1.003} & \multirow{2}{*}{0.9529} & \multirow{2}{*}{1.054} \\
-pt\_com \\
-pop\_dens & 0.001339 & 1.001 & 1.000 & 1.003 \\
-platform & 0.001339 & 1.001 & 0.9916 & 1.011 \\
-workers\_ft\_com & -0.0009058 & 0.9991 & 0.9968 & 1.001 \\
-aerodrome & -0.003797 & 0.9966 & 0.9402 & 1.045 \\
-urb\_dens & -0.004528 & 0.9955 & 0.9825 & 1.009 \\
-immigrants\_total & -0.02282 & 1.494e+38 & -1.435e+13 & -2.418e+08\\
-immigrants\_pure & -0.02963 & 1.486e+38 & -1.425e+13 & -2.403e+08\\
-schools & -0.03689 & 0.9674 & 0.8133 & 1.142 \\
-median\_age & -0.03716 & 0.9636 & 0.9363 & 0.9914 \\
-hairdresser & -0.04620 & 0.9715 & 0.6628 & 1.371 \\
-shops & -0.09960 & 0.9090 & 0.7566 & 1.082 \\
-unemp\_tot & -0.1105 & 0.9018 & 0.6975 & 1.116 \\
-higher\_education & -1.279 & 0.3591 & 0.06780 & 1.117 \\
-\bottomrule
-\end{tabular}
-\end{table}
-How different variables influence the relative risk is shown in Table~\ref{riskTableNorway}.
-\begin{table}[H]
-\caption{How different variables affect the relative risk. Does not contain all variables.\label{riskTableNorway}}
-\begin{tabular}{l l r r}
-\toprule
-\textbf{Variable} & \textbf{Scale} & \textbf{Increase} & \textbf{Risk increase} \\
-\midrule
-marketplace & per 1000 inhabitants & 0.1 & 11.4\% \\
-entertainment & per 1000 inhabitants & 0.1 & 4.6\% \\
-bakeries & per 1000 inhabitants & 0.1 & 3.5\% \\
-clinic & per 1000 inhabitants & 0.1 & 1.4\% \\
-retail & per 1000 inhabitants & 0.1 & 0.9\% \\
-nursing\_home & per 1000 inhabitants & 0.1 & 0.9\% \\
-kindergarten & per 1000 inhabitants & 0.1 & 0.5\% \\
-place\_of\_worship & per 1000 inhabitants & 0.1 & 0.3\% \\
-platform & per 1000 inhabitants & 0.1 & 0.01\% \\
-unemployment\_ & \multirow{2}{*}{per 1000 inhabitants} & \multirow{2}{*}{0.5} & \multirow{2}{*}{8.4\%}\\
-immigrants \\
-mining\_pt\_com & per 1000 inhabitants & 0.5 & 0.6\% \\
-mining\_ft\_com & per 1000 inhabitants & 0.5 & 0.02\% \\
-workers\_pt\_com & per 1000 inhabitants & 0.5 & 0.02\% \\
-construction\_pt\_ & \multirow{2}{*}{per 1000 inhabitants} & \multirow{2}{*}{0.5} & \multirow{2}{*}{0.01\%}\\
-com \\
-pop\_dens & people per km² & 100 & 14.3\% \\
-urb\_dens & residential buildings per km² & 10 & -4.4\% \\
-\bottomrule
-\end{tabular}
-\end{table}
-Finally, the posterior mean and posterior probability for Norway can be seen in Figure~\ref{posteriorNorway}. It can be seen that the risk is the highest in the region around the capital Oslo. In addition, there is a greater risk of infection in the Bergen region. The covid outbreak in Tromsø, which occurred in early March 2021, is also visible as the posterior probability for the region is between 0.75 and 1, while the relative risk is between 1.1 and 1.4.
+According to this model, schools, kindergartens, places of worship and nursing homes are infrastructural features that increase the risk of infection. In addition, higher population density also increases the risk of infection. Schools and kindergartens are the two biggest driving factors, as a 1 standard deviation increase in schools leads to a 40.6\% increase in risk and a 1 standard deviation increase in kindergartens leads to a 30.0\% increase in risk. The risk of schools and kindergartens is reflected in the Corona outbreak that occurred in Tromsø in early March 2021, where several infections have been linked to school classes and kindergartens \cite{tromsokorona}. A 1 standard deviation increase in population density leads to a 17.3\% increase in risk, and for places of worship and nursing homes, a 1 standard deviation increase leads to a 2.9\% and 0.4\% increase in risk, respectively. Finally, for restaurants, a 1 standard deviation increase leads to a 3.2\% increase in risk. Why restaurants do not have a large impact on the risk of infection has already been discussed in Section~\ref{sssec:infraGermany}
+\\
+For offices and shops, on the other hand, there is no increased risk of infection. For offices, one reason why they do not increase the risk could be that more and more people work from home and therefore there is less contact between people at office locations and thus no increased risk of infection. Finally, shops do not increase the risk of infection here, whereas in Germany they were one of the driving factors, as can be seen in Table~\ref{fixedInfraGermany}. Why this is so is difficult to say. Because of the lower infection numbers, there is of course less risk when people congregate in supermarkets, which may be an explanation, even if these are not driving factors of the pandemic in Norway. It could also mean that Norwegians are more likely to be careful to keep enough distance from each other. \\
+Looking at the posterior mean relative risk, it can be seen that the region in and around the capital Oslo is most at risk, as the posterior mean of the relative risk can be as high as 6, with a posterior probability between 0.75 and 1. In addition, some municipalities around Bergen and Ulvik are also more at risk, with a relative risk of up to 3.4 and a posterior probability between 0.75 and 1. \\
+The risk seems to be lowest in the parts north of Trondheim and south of Bodø, where the relative risk is mostly below 1. For many municipalities in Troms og Finnmark, the northernmost part of Norway, the posterior mean is also below 1, but for a few regions it is above 1 with posterior probabilities between 0.5 and 0.75 and 0.75-1.
 \begin{figure}[H]
     \centering
     \includegraphics[width = \textwidth]{posterior_norway.png}
@@ -513,6 +398,43 @@ Finally, the posterior mean and posterior probability for Norway can be seen in 
 %     \caption{A negative binomial fit to the number of cases in Norwegian municipalities}
 %     \label{nb_norge}
 % \end{figure}
+\subsubsection{Combined Models}
+For the models containing variables related to the demographic of Norway and the infrastructure, again a Besag model performed the best. Its formula can be seen in Listing~\ref{codeBothNorway}. \\
+The performance measures for the models are shown in Table~\ref{bothNorway}
+\begin{table}[H] 
+\caption{The performance measures for the best performing demographic + infrastructure model of each type. \label{bothNorway}}
+\begin{tabular}{l r r r r}
+\toprule
+\textbf{Model}	& \textbf{DIC}	& \textbf{WAIC} & \textbf{CPO} & \textbf{MAE} \\
+\midrule
+Besag  & 2409 & 2424 & -3977 & 12480 \\
+BYM2 & 2369 & 2383 & -4439 & 13193\\
+Leroux &  2322 & 2328 & -8020 & 12818\\
+\bottomrule
+\end{tabular}
+\end{table}
+The fixed effects are shown in Table~\ref{fixedAllNorway}.
+\begin{table}[H] 
+\caption{The fixed effects for the Besag model. Values are rounded. \label{fixedAllNorway}}
+\begin{tabular}{l r r r r}
+\toprule
+\textbf{Variable}	& \textbf{Mean}	& \textbf{exp(mean$_{\hbox{p}}$)} & \textbf{exp(q0025$_{\hbox{p}}$)} & \textbf{exp(q0975$_{\hbox{p}}$)} \\
+\midrule
+(Intercept) & -1.050 & 0.3544 & 0.2529 & 0.4796\\
+unemp\_tot & 0.1491 & 1.162 & 1.048 & 1.286 \\
+pop\_dens & 0.1417 & 1.157 & 0.9626 & 1.381 \\
+schools & 0.0900 & 1.108 & 0.8044 & 1.489 \\
+clinic & 0.06723 & 1.113 & 0.6157 & 1.859 \\
+sex & 0.04342 & 1.046 & 0.9420 & 1.157 \\
+restaurant & -0.02083 & 1.008 & 0.6095 & 1.568 \\
+median\_age & -0.1042 & 0.9023 & 0.8100 & 1.001 \\
+construction\_ft & -0.1772 & 0.8446 & 0.6495 & 1.078 \\
+\bottomrule
+\end{tabular}
+\end{table}
+Most of these factors have already been discussed in the previous sections, so they will not be discussed in detail again. \\
+Total unemployment, population density, the number of schools and the number of clinics are the four biggest drivers of relative risk, as a 1 standard deviation increase in any of these factors leads to an increase in relative risk of 16.2\%, 15.7\%, 10.8\% and 11.3\% respectively. That clinics increase the relative risk could be due to the fact that when there are more clinics in a community, more people who have symptoms go to a clinic and get tested, which naturally leads to more detected cases. The other two factors that increase the risk are the proportion of women in a community and the number of restaurants. For the proportion of women, a 1 standard deviation increase leads to a 4.6\% increase in risk and for restaurants, a 1 standard deviation increase leads to a 0.8\% increase in risk. \\
+The median age lowers the risk of infection, as an increase of 1 standard deviation lowers the relative risk by 9.8\%. This in turn means that people living in communities with a lower median age have a higher risk than people living in "older" communities. This could be due to the fact that younger people tend to be more mobile and have more contact with other people as a result of this increased movement, which in turn helps the virus spread.
 \clearpage
 \section{Spatio-Temporal Models}
 \subsection{Spatio-Temporal Models for Germany}
